# examples

./: .git-blame-ignore-revs  .gitattributes.txt  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  COPYRIGHT.md  README-developer.md  README.md  addheader.yml  environment.yml  file_header.txt  idaes_examples - Shortcut.lnk  pyproject.toml  requirements-dev.txt  requirements.txt  sakura-LICENSE.txt  setup.py  tutorial.md
.binder/: README.txt  postBuild  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/install/: action.yml
.github/workflows/: core.yml  docs.yml  publish.yml  typos.toml
idaes_examples/: README.md  browse.py  build.py  nbnew.py  pytest.ini  util.py
idaes_examples/archive/data_reconciliation/: boiler_data_rec.py  boiler_flowsheet_recon_src.ipynb  boiler_plant_recon_short.csv  econ_parmest_src.ipynb  econ_recon_src.ipynb
idaes_examples/archive/dmf/: data_management_framework_src.ipynb
idaes_examples/archive/dmf/my_workspace/: resourcedb.json
idaes_examples/archive/matopt/: bifunctional_surface_design.py  bifunctional_surface_design_src.ipynb  bimetallic_nanocluster_design.py  bimetallic_nanocluster_design_src.ipynb  metal_oxide_bulk_design.py  metal_oxide_bulk_design_src.ipynb  monometallic_nanocluster_design.py  monometallic_nanocluster_design_src.ipynb  nanowire_design_src.ipynb  nanowires_design.py  surface_design.py  surface_design_src.ipynb  undefected.cfg
idaes_examples/archive/omlt/: AR_training_methods.py  keras_flowsheet_optimization_src.ipynb
idaes_examples/archive/pecos/: data_quality_control_src.ipynb
idaes_examples/archive/power_gen/ngcc/: ngcc_soec_src.ipynb
idaes_examples/archive/power_gen/ngfc/: ngfc_flowsheet_src.ipynb
idaes_examples/archive/power_gen/rsofc/: cpu.py  cpu_surrogate_methods.py  rsofc_costing.py  rsofc_soec_flowsheet.py  rsofc_soec_src.ipynb
idaes_examples/archive/power_gen/soec/: soec.ipynb  soec.py  soec_flowsheet_costing.py
idaes_examples/archive/power_gen/sofc/: sofc.ipynb  sofc.py  sofc_costing.py  sofc_rom.py
idaes_examples/archive/power_gen/sofc_soec/: sofc_soec_costing.py  sofc_with_soec.ipynb  sofc_with_soec.py
idaes_examples/archive/ripe/: clc_nb_src.ipynb  cracsim.py  ripe_isothermal_cstr_src.ipynb  temptrace.trc
idaes_examples/archive/tut/: introduction_short_src.ipynb
idaes_examples/common/hda/: hda_ideal_VLE.py
idaes_examples/mod/: notebook_checks.py  util.py
idaes_examples/mod/co2_adsorption_desorption/: NETL_32D_adsorption_reactions.py  NETL_32D_gas_phase_thermo.py  NETL_32D_solid_phase_thermo.py  simulation_utilities.py
idaes_examples/mod/diagnostics/: util.py
idaes_examples/mod/hda/: hda_flowsheet_extras.py  hda_ideal_VLE.py  hda_ideal_VLE_modular.py  hda_reaction.py  hda_reaction_modular.py
idaes_examples/mod/methanol/: methanol_ideal_VLE.py  methanol_ideal_vapor.py  methanol_param_VLE.py  methanol_reactions.py  methanol_state_block_VLE.py
idaes_examples/mod/power_gen/: NGFC_flowsheet.py  SOFC_ROM.py  gas_turbine.py  hrsg.py  ngcc.py  ngcc_soec.py  ngcc_soec_costing.py  soc_dynamic_flowsheet.py  soec.py  steam_turbine.py
idaes_examples/mod/properties/: reaction_property_example.py  thermophysical_property_example.py
idaes_examples/mod/pysmo/: kriging_six_hump_function.py
idaes_examples/mod/surrogates/: AR_training_methods.py
idaes_examples/mod/tut/: visualizer_tutorial.py  workshoptools.py
idaes_examples/nb/: _toc.yml  _toc.yml.bak  conftest.py
idaes_examples/nb/_dev/: notebook_tags_example_exercise.ipynb  notebook_tags_example_src.ipynb  notebook_tags_example_test.ipynb  notebook_tags_example_usr.ipynb
idaes_examples/nb/dae/: petsc_chem_src.ipynb  petsc_pid_src.ipynb  pid.py
idaes_examples/nb/data_reconciliation/: boiler_data_rec.py  boiler_flowsheet_recon_src.ipynb  econ_parmest_src.ipynb  econ_recon.csv  econ_recon_src.ipynb  index.md
idaes_examples/nb/flowsheets/: HDA dist.json  HDA flowsheet with distillation.json  HDA.json  hda_flowsheet_with_costing_src.ipynb  hda_flowsheet_with_distillation_src.ipynb  hda_flowsheets_for_costing_notebook.py  hda_solver.txt  index.md  methanol_synthesis_src.ipynb  solver.txt  solver_captured.py
idaes_examples/nb/matopt/: bifunctional_surface_design_src.ipynb  bimetallic_nanocluster_design.py  bimetallic_nanocluster_design_src.ipynb  canvas.cfg  metal_oxide_bulk_design.py  metal_oxide_bulk_design_src.ipynb  monometallic_nanocluster_design.py  monometallic_nanocluster_design_src.ipynb  nanowire_design_src.ipynb  surface_design_src.ipynb
idaes_examples/nb/param_est/: parameter_estimation_nrtl_using_state_block_src.ipynb  parameter_estimation_nrtl_using_unit_model_src.ipynb
idaes_examples/nb/pecos/: data_quality_control_src.ipynb  index.md  simple_report.html
idaes_examples/nb/surrogates/ripe/: clc.py  (+10 more)
idaes_examples/nb/tools/: data_management_framework_src.ipynb  degeneracy_hunter_src.ipynb
idaes_examples/nb/tut/: flash_unit_src.ipynb  hda_flowsheet_src.ipynb  index.md  introduction_short_src.ipynb  introduction_src.ipynb  visualizer_tutorial_src.ipynb  workshoptools.py
idaes_examples/notebooks/: _config.yml  _toc.yml  conf.py  conftest.py  global.db  index.md  references.bib  test_notebooks.py
idaes_examples/notebooks/.jupyter_cache/: global.db
idaes_examples/notebooks/_static/: custom.css
idaes_examples/notebooks/flowsheets/: methanol_flowsheet_w_recycle.py
idaes_examples/notebooks/matopt/: index.md
idaes_examples/notebooks/nbcache/: global.db
idaes_examples/notebooks/param_est/: index.md
idaes_examples/notebooks/tut/: HDA_solved.json  Title.json  hda_flowsheet_src.ipynb  visualizer_tutorial.py
idaes_examples/shared/methanol/: methanol_reactions.py
idaes_examples/shared/power_gen/: ngcc.py  ngcc_soec.py
idaes_examples/shared/pysmo/: kriging_branin_function.py
idaes_examples/tests/: test_base.py  test_browse.py  test_build.py  test_informational.py  test_notebooks.py
scripts/: README.md  copy_files.py  edit_tags.py  generate_toc.py  map.yml  markdown_toc.py  notebook_new.py  notebook_skip.py  notebook_tags.py  pytest_report.py  update_intersphinx_mapping.py
(+662 files in other folders)
